--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "firebase-admin": "^11.8.0",
     "helmet": "^7.0.0",
+    "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22"
   }
