--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-sslify": "^1.2.0",
     "firebase-admin": "^11.8.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
