--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
     "node-fetch": "^3.3.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "ws": "^8.13.0"
   }
 }
