--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.2.0",
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22",
+    "redis": "^4.6.7",
     "ws": "^8.13.0"
   }
 }
