--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.0",
     "node-fetch": "^3.3.1",
-    "nodemon": "^2.0.22",
     "redis": "^4.6.7",
     "ws": "^8.13.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
