--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-sslify": "^1.2.0",
-    "firebase-admin": "^11.9.0",
+    "firebase-admin": "^11.10.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.3.2",
-    "node-fetch": "^3.3.1",
+    "mongoose": "^7.4.3",
+    "node-fetch": "^3.3.2",
     "redis": "^4.6.7",
-    "web-push": "^3.6.3",
+    "web-push": "^3.6.4",
     "ws": "^8.13.0"
   },
   "devDependencies": {
