--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "author": "Tony Char3",
   "license": "MIT",
   "dependencies": {
+    "@shopify/shopify-api": "^7.7.0",
     "axios": "^1.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "express-sslify": "^1.2.0",
     "firebase-admin": "^11.10.1",
     "helmet": "^7.0.0",
     "json2csv": "^6.0.0-alpha.2",
@@ -25,6 +25,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "node-fetch": "^3.3.2",
+    "query-string": "^8.1.0",
     "redis": "^4.6.7",
     "web-push": "^3.6.4",
     "ws": "^8.13.0"
