Adjusted the VerifyHash middleware, the error was not handled correctly + added a route for the visitor to send an email to the offline admin

--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "Tony Char3",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.438.0",
+    "@aws-sdk/types": "^3.433.0",
     "@shopify/shopify-api": "^7.7.0",
     "axios": "^1.5.0",
+    "bullmq": "^4.12.6",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -25,6 +28,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.7",
+    "nodemailer-ses-transport": "^1.5.1",
     "query-string": "^8.1.0",
     "redis": "^4.6.7",
     "web-push": "^3.6.4",
