--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/types": "^3.433.0",
     "@shopify/shopify-api": "^7.7.0",
     "axios": "^1.5.0",
+    "body-parser": "^1.20.2",
     "bullmq": "^4.12.6",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
